--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,45 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "Proyecto en CRUD_MERN",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
-  },
-  "author": "Jorge, Oscar, Wilkar",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "moongose": "^1.0.0"
-  },
-  "devDependencies": {
-    "jest": "^29.5.0",
-    "supertest": "^6.3.3"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "Proyecto en CRUD_MERN",
+    "type": "module",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js",
+        "test": "jest --detectOpenHandles"
+    },
+    "jest": {
+        "collectCoverageFrom": [
+            "**/*.js",
+            "!**/server.js",
+            "!**/node_modules/**",
+            "!**/coverage/**",
+            "!**/jest.config.js**"
+        ],
+        "testPathIgnorePatterns": [
+            "server.js"
+        ],
+        "coverageThreshold": {
+            "global": {
+                "branches": 80,
+                "functions": 80,
+                "lines": 80,
+                "statements": 80
+            }
+        }
+    },
+    "author": "Jorge, Oscar, Wilkar",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "moongose": "^1.0.0"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.22.6",
+        "jest": "^29.5.0",
+        "mongodb-memory-server": "^8.13.0",
+        "supertest": "^6.3.3"
+    }
 }
