--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon index.js",
-        "test": "jest --detectOpenHandles"
+        "test": "jest --detectOpenHandles",
+        "start": "node index.js"
     },
     "jest": {
         "collectCoverageFrom": [
